5.5 guide default update